@@ -27,8 +27,9 @@ import com.facebook.buck.android.packageable.AndroidPackageableCollector;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxPlatform;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxPlatformsProvider;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxRuntime;
-import com.facebook.buck.android.toolchain.ndk.NdkCxxRuntimeType;
 import com.facebook.buck.android.toolchain.ndk.TargetCpuType;
+import com.facebook.buck.android.toolchain.ndk.UnresolvedNdkCxxPlatform;
+import com.facebook.buck.android.toolchain.ndk.impl.StaticUnresolvedNdkCxxPlatform;
 import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.exceptions.HumanReadableException;
 import com.facebook.buck.core.model.BuildTarget;
@@ -38,14 +39,9 @@ import com.facebook.buck.core.model.targetgraph.TargetGraphFactory;
 import com.facebook.buck.core.model.targetgraph.TargetNode;
 import com.facebook.buck.core.rules.ActionGraphBuilder;
 import com.facebook.buck.core.rules.BuildRule;
-import com.facebook.buck.core.rules.BuildRuleParams;
-import com.facebook.buck.core.rules.SourcePathRuleFinder;
-import com.facebook.buck.core.rules.TestBuildRuleParams;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.sourcepath.SourceWithFlags;
-import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
-import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
 import com.facebook.buck.core.toolchain.impl.ToolchainProviderBuilder;
 import com.facebook.buck.core.toolchain.tool.impl.CommandTool;
 import com.facebook.buck.cxx.CxxLibrary;
@@ -58,7 +54,6 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ImmutableSortedSet;
-import java.nio.file.Paths;
 import java.util.Optional;
 import org.hamcrest.Matchers;
 import org.junit.Rule;
@@ -72,15 +67,11 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
   @Test
   public void testNdkLibrary() {
     ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
-    SourcePathResolver sourcePathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
 
     NdkLibrary ndkLibrary =
         new NdkLibraryBuilder(BuildTargetFactory.newInstance("//:ndklib")).build(graphBuilder);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(ndkLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -96,7 +87,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -107,8 +97,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
     collector.addPackageables(
         AndroidPackageableCollector.getPackageableRules(ImmutableSet.of(ndkLibrary)), graphBuilder);
 
@@ -119,10 +108,8 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
 
     assertThat(copyNativeLibraries.getStrippedObjectDescriptions(), Matchers.empty());
     assertThat(
-        copyNativeLibraries
-            .getNativeLibDirectories()
-            .stream()
-            .map(sourcePathResolver::getRelativePath)
+        copyNativeLibraries.getNativeLibDirectories().stream()
+            .map(graphBuilder.getSourcePathResolver()::getRelativePath)
             .collect(ImmutableList.toImmutableList()),
         Matchers.contains(ndkLibrary.getLibraryPath()));
   }
@@ -131,17 +118,17 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
   @SuppressWarnings("unchecked")
   public void testCxxLibrary() {
 
-    NdkCxxPlatform ndkCxxPlatform =
-        NdkCxxPlatform.builder()
-            .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
-            .setCxxRuntime(NdkCxxRuntime.GNUSTL)
-            .setCxxRuntimeType(NdkCxxRuntimeType.DYNAMIC)
-            .setCxxSharedRuntimePath(Paths.get("runtime"))
-            .setObjdump(new CommandTool.Builder().addArg("objdump").build())
-            .build();
+    UnresolvedNdkCxxPlatform ndkCxxPlatform =
+        StaticUnresolvedNdkCxxPlatform.of(
+            NdkCxxPlatform.builder()
+                .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
+                .setCxxRuntime(NdkCxxRuntime.GNUSTL)
+                .setCxxSharedRuntimePath(FakeSourcePath.of("runtime"))
+                .setObjdump(new CommandTool.Builder().addArg("objdump").build())
+                .build());
 
-    ImmutableMap<TargetCpuType, NdkCxxPlatform> nativePlatforms =
-        ImmutableMap.<TargetCpuType, NdkCxxPlatform>builder()
+    ImmutableMap<TargetCpuType, UnresolvedNdkCxxPlatform> nativePlatforms =
+        ImmutableMap.<TargetCpuType, UnresolvedNdkCxxPlatform>builder()
             .put(TargetCpuType.ARMV7, ndkCxxPlatform)
             .put(TargetCpuType.X86, ndkCxxPlatform)
             .build();
@@ -153,15 +140,12 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
     TargetNode<CxxLibraryDescriptionArg> cxxLibraryDescription = cxxLibraryBuilder.build();
     TargetGraph targetGraph = TargetGraphFactory.newInstance(cxxLibraryDescription);
     ActionGraphBuilder graphBuilder = new TestActionGraphBuilder(targetGraph);
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
     CxxLibrary cxxLibrary =
         (CxxLibrary)
             cxxLibraryBuilder.build(graphBuilder, new FakeProjectFilesystem(), targetGraph);
     graphBuilder.addToIndex(cxxLibrary);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -177,7 +161,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(TargetCpuType.ARMV7),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -188,8 +171,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
     collector.addPackageables(
         AndroidPackageableCollector.getPackageableRules(ImmutableSet.of(cxxLibrary)), graphBuilder);
 
@@ -211,10 +193,8 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
                     "strippedObjectName", Matchers.equalTo("libgnustl_shared.so")))));
     assertThat(copyNativeLibraries.getNativeLibDirectories(), Matchers.empty());
     ImmutableCollection<BuildRule> stripRules =
-        ruleFinder.filterBuildRuleInputs(
-            copyNativeLibraries
-                .getStrippedObjectDescriptions()
-                .stream()
+        graphBuilder.filterBuildRuleInputs(
+            copyNativeLibraries.getStrippedObjectDescriptions().stream()
                 .map(StrippedObjectDescription::getSourcePath)
                 .collect(ImmutableSet.toImmutableSet()));
     assertThat(
@@ -234,8 +214,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
                 .build(graphBuilder);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -251,7 +229,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -262,8 +239,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
 
     collector.addNativeLinkable(cxxLibrary);
 
@@ -281,8 +257,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
                 .build(graphBuilder);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -298,7 +272,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -309,8 +282,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
 
     collector.addNativeLinkableAsset(cxxLibrary);
 
@@ -327,17 +299,17 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
   @Test
   public void testDuplicateCxxLibrary() {
 
-    NdkCxxPlatform ndkCxxPlatform =
-        NdkCxxPlatform.builder()
-            .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
-            .setCxxRuntime(NdkCxxRuntime.GNUSTL)
-            .setCxxRuntimeType(NdkCxxRuntimeType.DYNAMIC)
-            .setCxxSharedRuntimePath(Paths.get("runtime"))
-            .setObjdump(new CommandTool.Builder().addArg("objdump").build())
-            .build();
+    UnresolvedNdkCxxPlatform ndkCxxPlatform =
+        StaticUnresolvedNdkCxxPlatform.of(
+            NdkCxxPlatform.builder()
+                .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
+                .setCxxRuntime(NdkCxxRuntime.GNUSTL)
+                .setCxxSharedRuntimePath(FakeSourcePath.of("runtime"))
+                .setObjdump(new CommandTool.Builder().addArg("objdump").build())
+                .build());
 
-    ImmutableMap<TargetCpuType, NdkCxxPlatform> nativePlatforms =
-        ImmutableMap.<TargetCpuType, NdkCxxPlatform>builder()
+    ImmutableMap<TargetCpuType, UnresolvedNdkCxxPlatform> nativePlatforms =
+        ImmutableMap.<TargetCpuType, UnresolvedNdkCxxPlatform>builder()
             .put(TargetCpuType.ARMV7, ndkCxxPlatform)
             .put(TargetCpuType.X86, ndkCxxPlatform)
             .build();
@@ -366,9 +338,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
     graphBuilder.addToIndex(cxxLibrary2);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create()
-            .withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary1, cxxLibrary2));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -384,7 +353,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(TargetCpuType.ARMV7),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -395,8 +363,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
     collector.addPackageables(
         AndroidPackageableCollector.getPackageableRules(ImmutableSet.of(cxxLibrary1, cxxLibrary2)),
         graphBuilder);
