@@ -19,12 +19,10 @@ package com.facebook.buck.rules.keys;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.model.RuleType;
-import com.facebook.buck.core.model.impl.ImmutableBuildTarget;
 import com.facebook.buck.core.rulekey.RuleKey;
 import com.facebook.buck.core.sourcepath.AbstractDefaultBuildTargetSourcePath;
 import com.facebook.buck.core.sourcepath.ForwardingBuildTargetSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
-import com.facebook.buck.io.ArchiveMemberPath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.log.thrift.ThriftRuleKeyLogger;
@@ -157,25 +155,24 @@ public class ThriftRuleKeyHasherTest {
         new File("test").toPath(), HashCode.fromString("0503e9786d39160e3811ea609c512530c7f66e82"));
     hasher.putKey(".path_value");
     hasher.putArchiveMemberPath(
-        ArchiveMemberPath.of(new File("archive_path").toPath(), new File("member_path").toPath()),
+        Paths.get("archive_path"),
+        Paths.get("member_path"),
         HashCode.fromString("f9d8ff855a16a3a3d28bfb445cc440502d6e895a"));
     hasher.putKey(".archive_member_path_value");
-    hasher.putNonHashingPath("non_hashing_test");
+    hasher.putNonHashingPath(Paths.get("non_hashing_test"));
     hasher.putKey(".non_hashing_path_value");
-    hasher.putSourceRoot(new SourceRoot("source_root"));
-    hasher.putKey(".source_root_value");
     hasher.putRuleKey(new RuleKey(HashCode.fromString("d0c852385a66458b6e960c89fac580e5eb6d6aec")));
     hasher.putKey(".rule_key_value");
     hasher.putRuleType(RuleType.of("sample_build_rule", RuleType.Kind.BUILD));
     hasher.putKey(".build_rule_type_value");
     hasher.putBuildTarget(
-        ImmutableBuildTarget.of(new File("cell_path").toPath(), "//base_name", "rule_name"));
+        BuildTargetFactory.newInstance(new File("cell_path").toPath(), "//base_name", "rule_name"));
     hasher.putKey(".build_target_value");
     hasher.putBuildTargetSourcePath(
         new AbstractDefaultBuildTargetSourcePath() {
           @Override
           public BuildTarget getTarget() {
-            return ImmutableBuildTarget.of(
+            return BuildTargetFactory.newInstance(
                 new File("cell_path_2").toPath(), "//base_name_2", "rule_name_2");
           }
 
@@ -254,10 +251,6 @@ public class ThriftRuleKeyHasherTest {
                     new com.facebook.buck.log.thrift.rulekeys.ArchiveMemberPath(
                         "archive_path", "member_path", "f9d8ff855a16a3a3d28bfb445cc440502d6e895a")))
             .put(".non_hashing_path_value", Value.path(new NonHashedPath("non_hashing_test")))
-            .put(
-                ".source_root_value",
-                Value.sourceRoot(
-                    new com.facebook.buck.log.thrift.rulekeys.SourceRoot("source_root")))
             .put(
                 ".rule_key_value",
                 Value.ruleKeyHash(new RuleKeyHash("d0c852385a66458b6e960c89fac580e5eb6d6aec")))
